--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
-  "name": "@cube00y-react/use-ripple",
-  "version": "1.0.0",
+  "name": "@cube-00y/use-ripple",
+  "version": "1.0.2",
   "description": "React ripple effect custom hooks",
   "main": "dist/index.js",
   "scripts": {
@@ -9,7 +9,7 @@
   },
   "repository": {
     "type": "git",
-    "url": "git+https://github.com/cube-00y/react-use-ripple-hooks.git"
+    "url": "git+https://github.com/cube-00y/use-ripple.git"
   },
   "keywords": [
     "React",
@@ -18,7 +18,7 @@
   ],
   "author": "cube00y",
   "license": "MIT",
-  "homepage": "https://github.com/cube-00y/react-use-ripple-hooks#readme",
+  "homepage": "https://github.com/cube-00y/use-ripple#readme",
   "peerDependencies": {
     "react": "^17.0.2",
     "react-dom": "^17.0.2"
